fixed the overflow of the text, and added different text to item building

--- a/Deliverable4/Background.css
+++ b/Deliverable4/Background.css
@@ -11,7 +11,7 @@ body{
 	max-width:75%;
 	margin-left:auto;
 	margin-right:auto;
-	height:100vh;
+	height:auto;
 	top:0;
 	bottom:0;
 
@@ -55,12 +55,13 @@ body{
 
 #explanation_box{
 	display:inline-block;
+	padding:5px;
+	margin:10px;
 	height:auto;
-	width:100%;
 	text-align:center;
 	color:#FFFFFF;
 	font-size:20px;
-	margin:10px;
+	overflow-y: auto;
 	
 	
 	
